--- a/ios/IRKit/IRKitResources/IRNewPeripheralScene1ViewController.xib
+++ b/ios/IRKit/IRKitResources/IRNewPeripheralScene1ViewController.xib
@@ -42,7 +42,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{84, 22}, {152, 49}}</string>
 						<reference key="NSSuperview" ref="158288460"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1061024257"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -78,7 +77,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{60, 93}, {200, 73}}</string>
 						<reference key="NSSuperview" ref="158288460"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="397159656"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -93,7 +91,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 164}, {320, 2}}</string>
 						<reference key="NSSuperview" ref="158288460"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="941055847"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -108,8 +105,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{60, 181}, {200, 200}}</string>
 						<reference key="NSSuperview" ref="158288460"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -123,7 +118,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 165}</string>
 						<reference key="NSSuperview" ref="158288460"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="963017780"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -136,7 +130,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 568}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="786211255"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
@@ -539,26 +532,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">113</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">IRNewPeripheralScene1ViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/IRNewPeripheralScene1ViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">NSLayoutConstraint</string>
-					<string key="superclassName">NSObject</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/NSLayoutConstraint.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
