--- a/ios/IRKit/IRKitResources/IRNewPeripheralScene2ViewController.xib
+++ b/ios/IRKit/IRKitResources/IRNewPeripheralScene2ViewController.xib
@@ -42,7 +42,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{60, 93}, {200, 73}}</string>
 						<reference key="NSSuperview" ref="565229340"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="963017780"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -57,7 +56,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 164}, {320, 2}}</string>
 						<reference key="NSSuperview" ref="565229340"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="941055847"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -72,7 +70,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{60, 172}, {200, 200}}</string>
 						<reference key="NSSuperview" ref="565229340"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="250963351"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -87,7 +84,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 165}</string>
 						<reference key="NSSuperview" ref="565229340"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="108073298"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -102,7 +98,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{73, 24}, {174, 53}}</string>
 						<reference key="NSSuperview" ref="565229340"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1061024257"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -117,8 +112,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{58, 366}, {204, 21}}</string>
 						<reference key="NSSuperview" ref="565229340"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -149,7 +142,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 568}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="526400683"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
@@ -607,26 +599,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">157</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">IRNewPeripheralScene2ViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/IRNewPeripheralScene2ViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">NSLayoutConstraint</string>
-					<string key="superclassName">NSObject</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/NSLayoutConstraint.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
